# constraint-dialect

./: .gitignore  CMakeLists.txt  README.md
include/Constraint/: ConstraintAttributes.h  ConstraintDialect.h  ConstraintOps.h  ConstraintTypes.h
lib/Conversion/: CMakeLists.txt  ConstraintToAffine.cpp  ConstraintToLLVM.cpp
lib/Dialect/: CMakeLists.txt  ConstraintDialect.cpp  ConstraintOps.cpp  ConstraintTypes.cpp
lib/Transforms/: CMakeLists.txt  ConservationCheck.cpp
test/: basic.mlir  conservation-edge-cases.mlir  conservation.mlir  lowering-edge-cases.mlir  lowering.mlir  roundtrip.mlir  types.mlir  verify-invalid.mlir  verify.mlir
tools/: CMakeLists.txt  constraint-opt.cpp
